Fix Description Text and Spacing
This commit fixes some more styling on the events cards and events page.

--- a/frontend/src/app/event/widgets/event-card/event-card.widget.css
+++ b/frontend/src/app/event/widgets/event-card/event-card.widget.css
@@ -18,3 +18,10 @@
     background-color: #525252;
     cursor: default;
 }
+
+.description-text {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-clamp: 3;
+    -webkit-line-clamp: 3;
+}
